feat: add about page with detailed app documentation and styling

--- a/src/app/pages/welcome-page-component/welcome-page-component.component.html
+++ b/src/app/pages/welcome-page-component/welcome-page-component.component.html
@@ -11,6 +11,7 @@
                 <button class="connect-button" (click)="connectWallet()">
                   <span>{{ walletService.isConnecting() ? 'Connecting...' : 'Connect Wallet' }}</span>
                 </button>
+                <button class="about-button" routerLink="/about">About QuizApp</button>
             </div>
           </div>
         </ng-container>
@@ -24,6 +25,7 @@
             </div>
             <div class="button-container">
               <button class="search-button" routerLink="/search-results">Search Quiz & Results</button>
+              <button class="about-button" routerLink="/about">About QuizApp</button>
             </div>
           </div>
         </ng-container>
